extension displays links and parser cleaning
Changed output of image_to_source parser to be tap separated instead of
comma

Extension now displays links to info and streams

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -22,5 +22,5 @@
       "js": ["show.js"]
     }
   ],
-  "web_accessible_resources": ["sourcefile.csv"]
+  "web_accessible_resources": ["sourcefile.tsv", "sites.json"]
 }
